src/test/deca/syntax/invalid/double_CBRACE.deca
//  Description :
//      Deux } à la fin du fichier avec un seul { au début
//
// Résultat:
//extraneous input '}' expecting <EOF>
//

{
    println("Hello");
} }